@@ -6,6 +6,7 @@ Revision history for PCRD
 	- Add mute feature to Sound module
 	- Add suspend feature to Power module
 	- Add new Device module
+	- PCRD now requires an "user agent" which executes some commands on behalf of the user
 
 0.003 - 2025-05-19
 	- Execute hook now gets passed the return value of the function
